# private-study-log

./: 2026-07-20-freeze-bootstrap-lanes-packaging.md  2026-07-20-mechanical-gates-vs-prompt-discipline.md  CHATGPT-DEEP-RESEARCH-BRIEF-v3-2026-07-16.md  CORTEX-EXPECTED-OUTCOME-2026-07-16.md  CORTEX-RESEARCH-REVIEW-2026-07-16.md  Database-architecture-study-log-4-30-26.md  FILE-MANAGEMENT-CONTRACT.md  MANIFEST.md  build-phases-living-ontology.md  cortex-chatgpt-review.md  cortex-research-path-flowchart-2026-07-19.html  cortex-research-path-flowchart-2026-07-19.md  dev log 04 30 2026.md  innovation-explore-exploit-and-kernel-prior-art-study-log-2026-07-17.md
Projects/: Ai agent.md  Litigation copilot.md  implemented context infrastructure.md  litigation_ai_copilot_platform_scope.md
Projects/Context-engineeering/: implemented context infrastructure.md
Projects/Context-engineering/: Theorylog.md
Projects/hades os/: ades OS UX Scope Add-On — Themes, Skins, Player Cards, and Social Identity.md  hermes bot creator ux.md  index.md  project-proposal.md
Projects/hermes/: context config.md
Projects/hermes-auto/: auto builder.md
Projects/seo-automation/: seo workflow automation.md
Projects/ui ux/: chatgpt learning from faiilure.md  handoff contract prompt.md  study log of prototype handoff.md
Projects/vastai/: 3090 vs rtx 8000 - processing speed.md  check tokens.md  current api key.md  how-to-run-server-latest.md  how-to-run-server.md  setup-opencode.md  token-proxy.md  vastai-portmapp-setup.md
Projects/working with ai/: claude-model-effort-selection.md  codex model split.md
communications/chatgpt-2026-07-16/: CHATGPT-DEEP-RESEARCH-BRIEF-v2-2026-07-16.md  CHATGPT-DEEP-RESEARCH-BRIEF-v3-2026-07-16.md  CORTEX-ALIGNMENT-REVIEW-2026-07-16.md  CORTEX-DEEP-RESEARCH-HANDOFF-2026-07-16.md  CORTEX-TARGET-ARCHITECTURE-v3-2026-07-16.md
cortex/: 2026-07-20-mechanical-gates-vs-prompt-discipline.md  agent-reliability-and-adversarial-review-study-log-2026-07-17.md  blackbox-graybox-agent-validation-survey-2026-07-22.md  cortex-concepts-and-glossary.md  cortex-pipeline-architecture.md  cortex-research-path-flowchart-2026-07-19.md  mechanically-controlling-llm-orchestrators-2026-07-22.md  mermaid render.md  orchestrator-control-design-proposal-2026-07-22.md  same-family-bias-firewall-2026-07-22.md  simple-codegraph-agent-contract-blog.md
cortex-snapshot/: GIT-COMMIT.txt  GIT-DIFF.txt  GIT-STATUS.txt  HANDOFF.md  IMPORT-MAP.json  MULTIAGENT.md  README.md
cortex-snapshot/cortex_core/: __main__.py  (+67 more)
snapshots/cortex-snapshot/: ARCHITECTURE.md  DIRECTORY-TREE.txt  SNAPSHOT-README.md  pyproject.toml
snapshots/cortex-snapshot/cortex_core/: __init__.py  _indep_regex.py  app_gates.py  arbitrate.py  assurance_contracts.py  assurance_evaluator.py  assurance_result.py  attestation.py  browser_fetch.py  catalog_reconcile.py  codex_judge.py  compressor.py  config.py  decomposer.py  deep_audit.py  deep_research.py  director.py  distill.py  driver_preflight.py  eval.py  fanout.py  fetch.py  fingerprint.py  format_fairness.py  govern.py  handoff.py  http_server.py  integrations.py  judge.py  kedb_incident.py  keys_cli.py  lanes.py  langfuse_sink.py  mcp.py  mcp_door.py  metrics.py  model_dispatch.py  model_driver.py  model_probe.py  ocr_tts.py  (+27 more)
snapshots/cortex-snapshot/docs/: HARNESS-SCORECARD-CONSOLIDATED.md
snapshots/cortex-snapshot/docs/design/: cortex-complete-feature-sweep-2026-07-13.md  cortex-local-redesign-contracts-fable.md  cortex-redesign-reconciled-spec.md  durable-gap-tracking-codex-2026-07-13.md  inspect-ai-adoption-plan-2026-07-14.md  multi-model-arbitration-B1-build-note-2026-07-14.md  multi-model-arbitration-critique-fable-2026-07-13.md  multi-model-arbitration-in-cortex-2026-07-13.md  multi-model-arbitration-verify-codex-2026-07-13.md  ocr-tts-ingest-lane-2026-07-14.md  scc-success-metrics-arbitration-codex-2026-07-13.md  scc-success-metrics-arbitration-fable-2026-07-13.md
snapshots/cortex-snapshot/docs/design/ownership-provenance/: 03-engineering-log.md  04-transcript-audit.md  05-governance-authorship.md
snapshots/cortex-snapshot/docs/harness/: CURRENT-STATE-AUTOMATION.md  EXPECTED_BEHAVIOR.md
snapshots/cortex-snapshot/docs/harness/examples/: CASEOS-RESEARCH-ESCALATION.md
snapshots/cortex-snapshot/hermes-plugin/cortex-assured-driver/: __init__.py
snapshots/cortex-snapshot/hermes-plugin/cortex-assured-driver/tests/: test_plugin.py
snapshots/cortex-snapshot/schemas/: project-state-current-v1.json  project-state-event-v1.json
snapshots/cortex-snapshot/schemas/assurance/: assurance-receipt.schema.json  evaluator-trust-root.schema.json  success-contract.schema.json
snapshots/cortex-snapshot/schemas/research/: source-authority.schema.json  sufficiency-proposal.schema.json  sufficiency-receipt.schema.json  trust-root.schema.json
snapshots/cortex-snapshot/schemas/routing/: model-capabilities.schema.json
snapshots/cortex-snapshot/tests/: fakes.py  graded_queries.yaml  test_agent_runner.py  test_app_contract.py  test_app_gate_fixtures.py  test_arch_checker.py  test_assurance_contracts.py  test_assured_research_state.py  test_audit_log_skill.py  test_authz.py  test_bakeoff_tasks.py  test_catalog_reconcile.py  test_catalog_yaml.py  test_ci_gates.py  test_citation_checker_v2.py  test_closeout_evidence_ref.py  test_coding_checker.py  test_compressor.py  test_cot_capture.py  test_cwe_patch_checker.py  test_deep_audit.py  test_deep_research_liveness.py  test_delete_confirm_skill.py  test_distill.py  test_doctor.py  test_edit_record_skill.py  test_eval.py  test_evaluator.py  test_evidence_schema.py  test_extract.py  test_faithfulness_halueval.py  test_faithfulness_hardened.py  test_faithfulness_strict.py  test_fetch_html_extraction.py  test_fetch_ssrf.py  test_fingerprint.py  test_gating.py  test_hermes_prometheus_exporter.py  test_hybrid_state_machine.py  test_ingest.py  (+77 more)
snapshots/cortex-snapshot/tests/fixtures/rubric_gate/broken_slop/: index.html
snapshots/cortex-snapshot/wrapper-protocol/: STATE-MACHINE.md
snapshots/cortex-snapshot/wrapper-scripts/: tier_lookup.py
(+247 files in other folders)
